--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -11,7 +11,7 @@
     <div class="nav-contextual nav-contextual--dark js-nav-contextual">
       <div class="nav-contextual__clip">
         <nav class="nav-contextual__clip__inner" role="navigation" aria-label="Categories navigation">
-          <ul class="nav-contextual__list horiz-list js-nav-contextual-list" ng-controller="ProductBrowseController"><%=
+          <ul class="nav-contextual__list horiz-list js-nav-contextual-list"><%=
               render(
                 :collection => @super_categories,
                 :partial => 'categories/super_cat_nav',
