--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -16,6 +16,8 @@
   <link rel="dns-prefetch" href="//themes.googleusercontent.com">
   <%# //Prefetch DNS for external assets %>
 
+  <%= yield :link_rels %>
+
   <%# Title %>
   <title><%= meta.page_title.html_safe %></title>
   <%# //Title %>
