Add super_cat parameter to T2 category links

--- a/app/views/categories/_category_nav.html.erb
+++ b/app/views/categories/_category_nav.html.erb
@@ -1,7 +1,9 @@
 <li class="drop-down-menu__divider "><%=
   link_to(
     category.name,
-    centre_products_path(:category => category.code),
+    centre_products_path(
+      :category => category.code, :super_cat => super_cat.code
+    ),
     :class => "btn btn--full btn--full-left",
     :target => '_self'
   )
