Set all cloudinary images to use WebP format - WSF-5729

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -94,7 +94,8 @@
               alt: "Photo of #{@product.name}",
               width: 469,
               height: 474,
-              crop: :lpad
+              crop: :lpad,
+              format: :auto
             ) %></li>
           <%- end -%>
         </ul>
@@ -106,7 +107,8 @@
               alt: "Photo of #{@product.name}",
               width: 469,
               height: 474,
-              crop: :lpad
+              crop: :lpad,
+              format: :auto
             ) %></li>
           <%- end -%>
         </ul>
