--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -5,7 +5,8 @@
         alt: "#{result.name} logo",
         width: 168,
         height: 62,
-        crop: :pad
+        crop: :pad,
+        format: :auto
       %>
     </span>
   <% end %>
