--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,7 +13,8 @@
       <%= fetch_image_tag @event.image,
         alt: "Photo of event: #{@event.name}",
         width: 638,
-        crop: :limit
+        crop: :limit,
+        format: :auto
       %>
     </div>
 
