WSF-5534: Added PDF icon

--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -156,7 +156,7 @@
 .icon-back-to-top:before {content: "\e031";}
 
 /* PDF */
-.icon-pdf:before {content: "\e033";}
+.icon--pdf:before {content: "\e033";}
 
 /* Gift card */
 .icon--gift-card:before {
