--- a/app/views/centre_info/_parking_terms_and_conditions.html.erb
+++ b/app/views/centre_info/_parking_terms_and_conditions.html.erb
@@ -1,9 +1,9 @@
 <small class="fine-print fine-print--<%= align %>">
   *
   <% if @parking.credit_card_surcharge_amount.to_i > 0 %>
-    <%= @parking.credit_card_surcharge_amount %>% surcharge on all credit card payments
+    <%= @parking.credit_card_surcharge_amount %>% surcharge on all credit card payments.
   <% end %>
   <% if @parking.pdf_ref.present? %>
-    parking <%= link_to 'terms &amp; conditions apply'.html_safe, cl_image_path(@parking.pdf_ref, format:'pdf'), target: '_blank', class:"test-terms-link" %>.
+    <span class="icon icon--pdf"></span> <%= link_to 'Parking terms &amp; conditions'.html_safe, cl_image_path(@parking.pdf_ref, format:'pdf'), target: '_blank', class:"test-terms-link" %> apply.
   <% end %>
 </small>
