Change to use cloudinary-url in national sass

--- a/app/assets/stylesheets/partials/layout/_national.scss
+++ b/app/assets/stylesheets/partials/layout/_national.scss
@@ -134,7 +134,7 @@
 
         /* Old IE */
         @include old-ie {top: 110px;}
-        
+
         h1 {
           /* Need a tigher `line-height` so the `span` will sit closer to the text under it */
           line-height: 1;
@@ -218,33 +218,33 @@
           }
         }
 
-    /* Hero image paths (see 'Image rotate' module) */ 
+    /* Hero image paths (see 'Image rotate' module) */
 
     .national__hero__1 {
       @include respond-max($palm) {
-        background-image: image-url("heroes/national/national-hero-01-sml.jpg");
+        background-image: cloudinary-url("heroes/national/national-hero-01-sml.jpg");
       }
 
       @include respond-range($lap, $lap-sml-end) {
-        background-image: image-url("heroes/national/national-hero-01-med.jpg");
+        background-image: cloudinary-url("heroes/national/national-hero-01-med.jpg");
       }
 
       @include respond-min($lap-lrg) {
-        background-image: image-url("heroes/national/national-hero-01-lrg.jpg");
+        background-image: cloudinary-url("heroes/national/national-hero-01-lrg.jpg");
       }
     }
 
     .national__hero__2 {
       @include respond-max($palm) {
-        background-image: image-url("heroes/national/national-hero-02-sml.jpg");
+        background-image: cloudinary-url("heroes/national/national-hero-02-sml.jpg");
       }
 
       @include respond-range($lap, $lap-sml-end) {
-        background-image: image-url("heroes/national/national-hero-02-med.jpg");
+        background-image: cloudinary-url("heroes/national/national-hero-02-med.jpg");
       }
 
       @include respond-min($lap-lrg) {
-        background-image: image-url("heroes/national/national-hero-02-lrg.jpg");
+        background-image: cloudinary-url("heroes/national/national-hero-02-lrg.jpg");
       }
     }
 
@@ -326,7 +326,7 @@
           right: 0;
           top: 0;
           bottom: 0;
-          @extend %transition-subtle; 
+          @extend %transition-subtle;
           @include linear-gradient($from: rgba(#000, 0) 0%, $to: rgba(#000, .8) 100%, $dir: left, $dir-webkit: right);
         }
 
