--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -1,31 +1,5 @@
 <% content_for :class_for_body, "national" %>
 
-<%# Background images of the centre tiles at each breakpoint %>
-<% content_for :custom_styles do %>
-  <style>
-    <% @centres.each do |centre| %>
-      <%# Hero image at small breakpoint %>
-      @media (max-width: 25em) {
-        .js-in-viewport .national__centre-tile--<%= centre.code %> {background-image: url(<%= centre_tile_image(centre.code, 400, 107) %>);}
-      }
-      <%# Hero image at medium breakpoint %>
-      @media (min-width: 25.0625em) and (max-width: 48em) {
-        .js-in-viewport .national__centre-tile--<%= centre.code %> {background-image: url(<%= centre_tile_image(centre.code, 768, 205) %>);}
-      }
-      <%# Hero image at large breakpoint %>
-      @media (min-width: 48.0625em) {
-        .js-in-viewport .national__centre-tile--<%= centre.code %> {background-image: url(<%= centre_tile_image(centre.code, 1600, 300) %>);}
-      }
-      <%# Old IE %>
-      .old-ie .js-in-viewport .national__centre-tile--<%= centre.code %> {
-        background-image: url(<%= centre_tile_image(centre.code, 1600, 300) %>);
-      }
-    <% end %>
-  </style>
-<% end %>
-<%# //Background images of centre tiles %>
-
-
 <%# National landing page wrapper %>
 <div class="national__inner">
 
@@ -92,22 +66,22 @@
         <%# Tab nav %>
         <ul class="tab__nav horiz-list">
           <li>
-            <a class="is-active" href="#tab-nsw"><abbr title="New South Wales">NSW</abbr></a>
+            <a class="js-viewport-check-on-click is-active" href="#tab-nsw"><abbr title="New South Wales">NSW</abbr></a>
           </li>
           <li>
-            <a href="#tab-act"><abbr title="Australian Capital Territory">ACT</abbr></a>
+            <a class="js-viewport-check-on-click" href="#tab-act"><abbr title="Australian Capital Territory">ACT</abbr></a>
           </li>
           <li>
-            <a href="#tab-qld"><abbr title="Queensland">QLD</abbr></a>
+            <a class="js-viewport-check-on-click" href="#tab-qld"><abbr title="Queensland">QLD</abbr></a>
           </li>
           <li>
-            <a href="#tab-vic"><abbr title="Victoria">VIC</abbr></a>
+            <a class="js-viewport-check-on-click" href="#tab-vic"><abbr title="Victoria">VIC</abbr></a>
           </li>
           <li>
-            <a href="#tab-sa"><abbr title="South Australia">SA</abbr></a>
+            <a class="js-viewport-check-on-click" href="#tab-sa"><abbr title="South Australia">SA</abbr></a>
           </li>
           <li>
-            <a href="#tab-wa"><abbr title="Western Australia">WA</abbr></a>
+            <a class="js-viewport-check-on-click" href="#tab-wa"><abbr title="Western Australia">WA</abbr></a>
           </li>
         </ul>
         <%# //Tab nav %>
@@ -116,7 +90,7 @@
       <% %w(NSW ACT QLD VIC SA WA).each do |state| %>
         <ul id="tab-<%= state.downcase %>" class="tab__content<%= ' is-active' if state == 'NSW' %>">
           <% @centres_by_state[state].each do |centre| %>
-            <li class="js-centre-list-item">
+            <li class="js-viewport-check">
               <a class="national__centre-tile national__centre-tile--<%= centre.code %>" href="<%= centre_path( centre ) %>">
                 <div class="container">
                   <h3 class="h1"><%= centre.short_name %></h3>
@@ -133,15 +107,28 @@
 
   <% content_for :javascript do %>
     <script>
-      var viewportCheck = function() {
-        setTimeout(function(){
-          $('.js-centre-list-item:in-viewport').addClass('js-in-viewport');
-        }, 0);
-      }
-      viewportCheck();
-      $(window).scroll(viewportCheck);
-      $('.tab__nav a').click(viewportCheck);
+
     </script>
+
+
+    <%#
+        Background images of the centre tiles at each breakpoint.
+        This is in the `content_for :javascript` because it is not need till after the js
+        has loaded and adds quite a bit of page weight.
+    %>
+    <style>
+      <% @centres.each do |centre| %>
+        <%# Hero image at small breakpoint %>
+        @media (max-width: 25em) {.is-in-viewport .national__centre-tile--<%= centre.code %> {background-image: url(<%= centre_tile_image(centre.code, 400, 107) %>);}}
+        <%# Hero image at medium breakpoint %>
+        @media (min-width: 25.0625em) and (max-width: 48em) { .is-in-viewport .national__centre-tile--<%= centre.code %> {background-image: url(<%= centre_tile_image(centre.code, 768, 205) %>);}}
+        <%# Hero image at large breakpoint %>
+        @media (min-width: 48.0625em) {.is-in-viewport .national__centre-tile--<%= centre.code %> {background-image: url(<%= centre_tile_image(centre.code, 1600, 300) %>);}}
+        <%# Old IE %>
+        .old-ie .is-in-viewport .national__centre-tile--<%= centre.code %> {background-image: url(<%= centre_tile_image(centre.code, 1600, 300) %>);}
+      <% end %>
+    </style>
+    <%# //Background images of centre tiles %>
   <% end %>
 
   <%# Footer %>
