Added gradient to national landing page

--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -1065,8 +1065,8 @@ $header-color-link-hover: $color-brand !default;
 				.icon:before {font-size: 100%;}
 			}
 
-		/* Gradient overlay */
-		.header__hero__gradient {
+		/* Gradient overlay - used on national landing page as well */
+		.hero-gradient {
 			display: block;
 			position: absolute;
 			z-index: 1;
