--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -38,6 +38,8 @@
     <div class="national__hero__1 img-rotate__item"></div>
     <%# //Rotating images %>
 
+    <span class="hero-gradient"></span>
+
     <%# Container %>
     <div class="container container--position">
       <%# Logo %>
