WSF-5779: Added no. of centres to national landing page

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -49,7 +49,7 @@
       <%# Hero heading wrap %>
       <div class="national__heading__intro">
         <h1>
-          <span>Over 10,300 stores. Over <%= number_with_delimiter(@products_count, separator: ',') %> products</span>
+          <span>40 centres. Over 10,300 stores. Over <%= number_with_delimiter(@products_count, separator: ',') %> products</span>
           You want. We find.
         </h1>
 
