WSF-5071 click-thru intermediate page using javascript

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,6 +87,7 @@ Global stylesheet
 @import "partials/layout/main";
 @import "partials/layout/footer";
 @import "partials/layout/national";
+@import "partials/layout/redirection";
 
   /* Layout -> Grid */
   @import "partials/layout/grid/grid";
