--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -38,7 +38,9 @@
     <div class="national__hero__1 img-rotate__item"></div>
     <%# //Rotating images %>
 
+    <%# Gradient overlay %>
     <span class="hero-gradient"></span>
+    <%# //Gradient overlay %>
 
     <%# Container %>
     <div class="container container--position">
