--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -169,7 +169,7 @@
 		</div>
 
 		<%# Gradient overlay %>
-		<span class="header__hero__gradient"></span>
+		<span class="hero-gradient"></span>
 		<%# //Gradient overlay %>
 
 	</div>
