--- a/app/assets/stylesheets/partials/layout/grid/_grid.scss
+++ b/app/assets/stylesheets/partials/layout/grid/_grid.scss
@@ -29,6 +29,14 @@
 		/* Need to offset bottom margin to keep spacing consistent */
 		@include to-rem(margin-bottom, -$grid-gutter);
 	}
+
+	/* Non-linear (always cols) version at this breakpoint*/
+	@include respond-min($non-palm) {
+		&.grid--non-linear-non-palm {
+			/* Need to offset bottom margin to keep spacing consistent */
+			@include to-rem(margin-bottom, -$grid-gutter);
+		}
+	}
 }
 
 	/* Grid item */
@@ -114,7 +122,14 @@
 /* Apply bottom margins at non-palm */
 @include respond-min($non-palm) {
 	/* Base bottom margin */
-	.grid--mrg-base-non-palm > .grid__item {@include to-rem(margin-bottom, $grid-gutter);}
+	.grid--mrg-base-non-palm {
+		> .grid__item {
+			@include to-rem(margin-bottom, $grid-gutter);
+
+			/* Turn off for last child */
+			&:last-child {@include to-rem(margin-bottom, 0);}
+		}
+	}
 }
 
 /* Center align */
